# ncrypt-rs

./: Cargo.toml  readme.md
crates/encryption/: Cargo.toml
crates/encryption/src/: credentials.rs  decrypt.rs  encrypt.rs  lib.rs  prelude.rs
src/: lib.rs  main.rs
src/app/: mod.rs  window.rs
src/gui/: app.rs  central_panel.rs  left_panel.rs  main.rs  mod.rs  right_panel.rs
src/gui/ui/: central_panel.rs  file_encryption.rs  left_panel.rs  mod.rs  text_hashing.rs
src/gui/ui/central_panel/: mod.rs
