[package]
name = "n_crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
egui = "0.26.2"
eframe = "0.26.2"
rfd = "0.14.1"

# Crypto
password-hash = "0.5.0"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
sha2 = "0.10.8"

# Misc
anyhow = "1.0.44"
serde_json = "1.0.115"
num-format = "0.4.4"

[[bin]]
name = "ncrypt"
path = "src/gui/main.rs"
