workspace = { members = ["crates/encryption"]}
[package]
name = "n_crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GUI
eframe = "0.28.1"
rfd = "0.14.1"

# Local crates
encryption = { path = "crates/encryption" }

# Misc
num-format = "0.4.4"
lazy_static = "1.4.0"