workspace = { members = ["crates/encryption"]}
[package]
name = "n_crypt"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GUI
eframe = "0.29.1"
rfd = "0.14.1"

# Local crates
encryption = { path = "crates/encryption" }

# Crypto
sha3 = "0.10.8"

# Misc
num-format = "0.4.4"