[package]
name = "encryption"
version = "1.0.0"
edition = "2021"

[dependencies]

# Crypto
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"]}


# Misc
bincode = "1.3.3"
zeroize = "1.8.1"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"

# Error
anyhow = "1.0.44"